--- a/package.json
+++ b/package.json
@@ -1,62 +1,40 @@
 {
-  "name": "simple-beatiful-open-project-templete",
+  "name": "featured-free-font",
   "version": "1.0.0",
-  "description": "A modern, beautiful, and well-structured open source project template",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
-    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+  "description": "A curated collection of beautiful, free fonts for commercial use",
+  "homepage": "https://leonwong282.notion.site/font?v=3113cedbea13433ab58465f2f47dff0a&pvs=74",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leonwong282/featured-free-font.git"
   },
-  "keywords": [
-    "template",
-    "starter",
-    "modern",
-    "typescript",
-    "react",
-    "vite",
-    "open-source"
-  ],
+  "bugs": {
+    "url": "https://github.com/leonwong282/featured-free-font/issues"
+  },
   "author": {
     "name": "Leon Wong",
     "email": "leonwong282@gmail.com",
     "url": "https://github.com/leonwong282"
   },
   "license": "GPL-3.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/leonwong282/simple-beatiful-open-project-templete.git"
+  "keywords": [
+    "fonts",
+    "typography",
+    "free-fonts",
+    "commercial-use",
+    "design",
+    "cjk-fonts",
+    "chinese-fonts",
+    "open-source-fonts",
+    "font-collection",
+    "graphic-design"
+  ],
+  "scripts": {
+    "lint": "echo 'Linting documentation...'",
+    "format": "echo 'Formatting files...'",
+    "validate": "echo 'Validating font links and licenses...'"
   },
-  "bugs": {
-    "url": "https://github.com/leonwong282/simple-beatiful-open-project-templete/issues"
-  },
-  "homepage": "https://github.com/leonwong282/simple-beatiful-open-project-templete#readme",
+  "devDependencies": {},
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.8"
+    "node": ">=16.0.0"
   }
 }
